<resources>
    <string name="action_settings">Settings</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="amount">Amount</string>
    <string name="app_name">MoneySaver</string>
    <string name="cancel">Cancel</string>
    <string name="custom_expense">Custom expense</string>
    <string name="custom_income">Custom income</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="done">Done</string>
    <string name="expense_chart">Expense Chart</string>
    <string name="expense_type">Type</string>
    <string name="expenses">Expenses</string>
    <string name="from">From</string>
    <string name="hint_details">Details</string>
    <string name="hint_pick_the_type">Pick the type</string>
    <string name="hint_view_statistics">View statistics</string>
    <string name="income">Income</string>
    <string name="income_chart">Income Chart</string>
    <string name="margin">Margin</string>
    <string name="minus_sign">-</string>
    <string name="new_expense">New Expense</string>
    <string name="new_income">New Income</string>
    <string name="no_expenses_in_this_period">You do not have any expenses\nlogged during this period</string>
    <string name="no_income_in_this_period">You do not have any income\nlogged during this period</string>
    <string name="no_items_string">Start by noting down your income or expense</string>
    <string name="ok">OK</string>
    <string name="other_ellipsized">Other…</string>
    <string name="pick_expense_type">Pick expense type</string>
    <string name="pick_income_type">Pick income type</string>
    <string name="please_pick_the_type">Please, pick the type</string>
    <string name="plus_sign">+</string>
    <string name="save">Save</string>
    <string name="title_activity_item_details">Item Details</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="to">To</string>
    <string name="undo">Undo</string>
    <string name="value_is_too_large">Value is too large</string>
    <string name="view_stats">View Stats</string>
    <string name="today">Today</string>
    <string name="suggestions">Suggestions</string>
    <string name="information">Information</string>
    <string-array name="expense_items_array">
        <item>Grocery</item>
        <item>Clothes</item>
        <item>Rent</item>
        <item>Personal care</item>
        <item>Fuel</item>
        <item>Gym</item>
        <item>Medicine</item>
        <item>Restaurant</item>
        <item>Arrears</item>
        <item>Entertainment</item>
        <item>Transportation</item>
    </string-array>
    <string-array name="income_items_array">
        <item>Salary</item>
        <item>Advance Payment</item>
        <item>End of the year bonus</item>
        <item>Payments</item>
    </string-array>
    <string name="entertainment"></string>
    <string name="created_by">Created by Jhonathan Ballesteros</string>
    <string name="version">Version 0.58</string>
    <string name="send_suggestion">Send Suggestion</string>
    <string name="message">Suggestion</string>
    <string name="subject">Subject</string>
</resources>
