<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.tr.MoneySaver.ui.Informationapp"
    android:background="@mipmap/fondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/information_tv"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:gravity="bottom|center_horizontal"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:id="@+id/textView"
        android:textColor="#b8b8b8"
        android:gravity="center_horizontal"
        android:textSize="15dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@+id/information_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="213dp"
        android:layout_height="213dp"
        android:src="@mipmap/icon"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/created_by"
        android:id="@+id/textView2"
        android:textColor="#898989"
        android:layout_gravity="center"
        android:gravity="bottom|center_horizontal"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="© 2016"
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:textColor="#757575"
        android:gravity="center|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="23dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerInParent="true" />


</RelativeLayout>